Melhoria do Dao, melhoria das telas